# Generalized-PD

./: CITATION.cff  Cargo.toml  README.md
src/: lib.rs  pd.rs
src/pd/: phylogenetic_diversity.rs
tests/: main.rs
