[package]
name = "PD"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
itertools = "0.13.0"
num = "0.4.3"
rand = "0.8.5"
indicatif = "0.17.8"
clap = "4.5.7"
anyhow = "1.0.86"
phylo = "0.2.4"

[dev-dependencies]
divan = "0.1.14"
